# TeleBar

./: CMakeList.txt  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
app/include/telebar/configuration/: clientConfiguration.hpp  gameConfiguration.hpp  serverConfiguration.hpp
app/include/telebar/controller/: securityController.hpp
app/include/telebar/entity/: Board.hpp  Game.hpp  GameAction.hpp  Message.hpp  Piece.hpp  Player.hpp  User.hpp  UserNotification.hpp
app/include/telebar/handler/serverHandler/: serverGameHandler.hpp  serverHandler.hpp
app/include/telebar/handler/serverHandler/serverGameHandler/: serverGameHandlerOrchestrator.hpp  serverGetBoardHandler.hpp  serverGetMessageHandler.hpp  serverGetNotificationHandler.hpp  serverNewMessageHandler.hpp  serverSetBoardHandler.hpp  serverStartGameHandler.hpp
app/include/telebar/interface/: ORMInterface.hpp  SerializableInterface.hpp
app/include/telebar/kernel/: Client.hpp  Server.hpp
app/include/telebar/userInterface/handlers/: clientHandler.hpp  menuHanlder.hpp
app/include/telebar/userInterface/printers/: gamePrinter.hpp  menuPrinter.hpp
app/include/telebar/utils/: ORM.hpp  SerializableInterface.hpp  serializableUtils.hpp  userAuthenticationUtils.hpp
app/src/: client.cpp  game.cpp  mainClient.cpp  mainServer.cpp  server.cpp
app/src/controller/: dbController.cpp  securityController.cpp
app/src/entity/: Game.cpp  GameAction.cpp  Message.cpp  Piece.cpp  Player.cpp  User.cpp  UserNotification.cpp
app/src/handler/serverHandler/: serverGameHandler.cpp  serverHandler.cpp
app/src/handler/serverHandler/serverGameHandler/: serverGameHandlerOrchestrator.cpp  serverGetBoardHandler.cpp  serverGetMessageHandler.cpp  serverGetNotificationHandler.cpp  serverNewMessageHandler.cpp  serverSetBoardHandler.cpp  serverStartGameHandler.cpp
app/src/interface/: SerializableInterface.cpp
app/src/kernel/: Client.cpp  Server.cpp
app/src/utils/: ORM.cpp  serializableUtils.cpp  userAuthenticationUtils.cpp
